--- a/wma-web/src/assets/CSS/fullpageloader.css
+++ b/wma-web/src/assets/CSS/fullpageloader.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, .3);
+  background-color: var(--color-dark);
   color: #fff;
   font-size: 2rem;
   z-index: 999999;
