--- a/wma-web/src/assets/CSS/topNav.css
+++ b/wma-web/src/assets/CSS/topNav.css
@@ -107,6 +107,7 @@
 
 .menu-list{
   list-style-type: none;
+  padding-left: 0 !important;
 }
 
 .menu-link{
@@ -116,6 +117,9 @@
   background-color: var(--color-dark2);
   margin-bottom: 2px;
   color: #fff;
+  border: none;
+  width: 100%;
+  text-align: left;
 }
 
 .menu-link.active{
